--- a/src/main/resources/application.yaml
+++ b/src/main/resources/application.yaml
@@ -1,3 +1,32 @@
 spring:
   application:
     name: blog
+
+  datasource:
+    url: jdbc:postgresql://localhost:5432/blogdb
+    username: blog
+    password: blogpass
+    driver-class-name: org.postgresql.Driver
+
+
+  jpa:
+    hibernate:
+      ddl-auto: validate
+    show-sql: true
+    open-in-view: false
+    database-platform: org.hibernate.dialect.PostgreSQLDialect
+
+  flyway:
+    enabled: true
+    locations: classpath:db/migration
+    default-schema: public
+    baseline-on-migrate: true
+
+  security:
+    user:
+      name: admin
+      password: admin
+      roles: ADMIN
+  
+server:
+  port: 8080
